# httpd-portable

./: CMakeLists.txt  httpd.conf
compat/: CMakeLists.txt  arc4random.h  crypt_checkpass.c  cryptutil.c  endian.h  fmt_scaled.c  openbsd-compat.h  stdlib.h  string.h  unistd.h  util.h
compat/net/: if_arp.h
compat/netinet/: if_ether.h  in.h  ip.h  ip6.h  ip_var.h  udp.h  udp_var.h
compat/sys/: sysctl.h  types.h  uio.h  un.h  wait.h
quic/: .CMakeLists.txt.swp  CMakeLists.txt  handshake.c  server.c
quic/netinet/: quic.h
src/: CMakeLists.txt  config.c  control.c  httpd.c  httpd.h  logger.c  parse.y  proc.c  server.c  server_fcgi.c  server_file.c  server_http.c  server_http3.c
